--- a/src/css/style.css
+++ b/src/css/style.css
@@ -372,8 +372,8 @@ body {
 }
 
 .navbar-brand img {
-  height: 40px;
-  width: 125px;
+  height: 60px !important;
+  width:  60px ;
 }
 
 .navbar-nav {
@@ -419,7 +419,7 @@ body {
 }
 
 .User_option a:last-child {
-  background-color: #ff9800;
+  background-color: #363434a1 !important;
   color: white;
 }
 
@@ -1079,7 +1079,7 @@ a:focus {
 }
 
 .us_section {
-  background-color: #0f2480;
+  background-color: #6d6d6d;
   color: #ffffff;
 }
 
@@ -1234,11 +1234,11 @@ a:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 40px;
+ 
 }
 
 .contact_section .container-fluid {
-  background-color: #0f2480;
+  background-color: #9a9a9a;
   color: #ffffff;
 }
 
@@ -1377,7 +1377,7 @@ a:focus {
 
 /* footer section*/
 .footer_section {
-  background-color: #0f2480;
+  background-color: #717276;
 }
 
 .footer_section p {
@@ -1436,7 +1436,7 @@ a:focus {
 
 /* Card styling */
 .card {
-  background: white;
+  background: rgb(255, 255, 255);
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
   overflow: hidden;
