--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -429,7 +429,7 @@ a:focus {
     }
 
     a {
-      @include hero_btn($primary1, $white, 7px, 30px, 25px);
+      @include hero_btn($black, $white, 7px, 30px, 25px);
       margin-top: 25px;
     }
   }
@@ -519,12 +519,12 @@ a:focus {
 
 
       .detail-box {
-        background-color: $primary1;
+        background-color: $gray;
 
 
         .heading-box {
           padding: 20px 0;
-          background-color: $primary2;
+          background-color: #2a2a2c;
 
           h4 {
             font-weight: bold;
@@ -537,7 +537,7 @@ a:focus {
         }
 
         .text-box {
-          padding: 45px 0;
+          padding: 85px 0;
 
           h2 {
             font-weight: bold;
@@ -555,8 +555,12 @@ a:focus {
               border-radius: 10px;
               transform: translateX(-50%);
               background-color: $white;
+
             }
+           
           }
+
+         
 
           ul {
             padding: 0;
@@ -576,7 +580,7 @@ a:focus {
 
         a {
           padding: 7px 30px;
-          background-color: $primary2;
+          background-color: $gray;
           color: $white;
           border-radius: 25px;
         }
@@ -584,8 +588,16 @@ a:focus {
 
       &:hover {
         .detail-box {
-          background-color: #f9bc16;
+          background-color: #d1d3d1;
+          color: black;
+          transition: 0.7s;
         }
+
+        
+        
+      h6{
+        color: white;
+      }
 
         .btn-box {
           a {
@@ -613,7 +625,7 @@ a:focus {
     }
 
     a {
-      @include hero_btn($primary1, $white, 7px, 30px, 25px);
+      @include hero_btn($black, $white, 7px, 30px, 25px);
       margin-top: 25px;
     }
   }
@@ -639,8 +651,8 @@ a:focus {
 // us section
 
 .us_section {
-  background-color: $primary2;
-  color: $white;
+  background-color: #929292;
+  color: $black;
 
   .heading_container {
     align-items: center;
@@ -657,14 +669,19 @@ a:focus {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    color: $white;
+    color: $black;
     margin: 25px 0;
 
     .img-box {
       margin-bottom: 15px;
+      background-color: #494949;
+      padding: 20px;
+      border-radius: 20px;
+      align-items: center;
 
       img {
         width: 100%;
+        
       }
     }
 
@@ -741,7 +758,7 @@ a:focus {
         content: "";
         width: 50px;
         height: 155px;
-        background-color: $primary2;
+        background-color: $black;
         position: absolute;
         left: 10%;
         top: 37px;
@@ -752,7 +769,7 @@ a:focus {
     .carousel-control-next {
       width: 45px;
       height: 45px;
-      background-color: $primary2;
+      background-color: $black;
       border-radius: 100%;
       top: 50%;
       opacity: 1;
@@ -782,22 +799,22 @@ a:focus {
 
   .heading_container {
     align-items: center;
-    margin-bottom: 40px;
+    
   }
 
   .container-fluid {
-    background-color: $primary2;
+    background-color: #929292;
     color: $white;
   }
 
   .form_container {
-    padding: 45px 0 45px 15px;
+    padding: 45px 0 45px 35px;
   }
 
   form {}
 
   input {
-    width: 100%;
+    width: 110%;
     border: none;
     background-color: $white;
     outline: none;
@@ -819,10 +836,17 @@ a:focus {
     outline: none;
     border: none;
     color: $white;
-    background: #f97616;
+    background: #000000;
     border-radius: 25px;
     margin: 45px 0 0 auto;
     text-transform: uppercase;
+    
+  }
+
+  button:hover{
+    background: #fefeff;
+    color: #0b0b0b;
+    transition: 0.7s;
   }
 
   .map_container {
@@ -900,7 +924,7 @@ a:focus {
         outline: none;
         border: none;
         color: $white;
-        background: #f97616;
+        background: #000000;
         margin-top: 15px;
         text-transform: uppercase;
       }
